--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,11 +57,5 @@
     "edu.wpi.first.math.**.proto.*",
     "edu.wpi.first.math.**.struct.*",
   ],
-  "java.compile.nullAnalysis.mode": "automatic",
-  "java.problems.enabled": true,
-  "java.codeAction.sortMembers.avoidVolatileChanges": true,
-  "java.errors.incompleteClasspath.severity": "ignore",
-  "java.sources.organizeImports.staticStarThreshold": 99,
-  "java.symbols.includeSourceMethodDeclarations": true,
-  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx8G -Xms100m -Xlog:disable"
+  "java.dependency.enableDependencyCheckup": false
 }
